modify manual and dockerfile

--- a/docs/1 sql_cover_testing/1.2.1 python_based__MySQL_driver_testing.md
+++ b/docs/1 sql_cover_testing/1.2.1 python_based__MySQL_driver_testing.md
@@ -7,10 +7,10 @@
 ### 按不同的表类型进行覆盖测试
 表类型                   | 测试命令
 ------------------|--------------------
-分片表                   | behave -Ddble_conf=sql_cover_sharding features/sql_cover/sql_sharding.feature
-全局表                   |behave -Ddble_conf=sql_cover_global features/sql_cover/sql_global.feature
-非分片表               |behave --stop -Ddble_conf=sql_cover_nosharding features/sql_cover/sql_nosharding.feature
-混合表类型           |behave -Ddble_conf=sql_cover_mixed features/sql_cover/sql_mixed.feature
+分片表                   |pipenv run behave -Ddble_conf=sql_cover_sharding features/sql_cover/sql_sharding.feature
+全局表                   |pipenv run behave -Ddble_conf=sql_cover_global features/sql_cover/sql_global.feature
+非分片表               |pipenv run behave --stop -Ddble_conf=sql_cover_nosharding features/sql_cover/sql_nosharding.feature
+混合表类型           |pipenv run behave -Ddble_conf=sql_cover_mixed features/sql_cover/sql_mixed.feature
 
 ### 特殊sql的专项case覆盖
 测试场景                 | 测试文件
